refactor: SearchableFieldにおいて、プロパティとしてFIELD_MAPを持たせ、存在チェックやタイプ取得はこのマップを通して行う仕様に変更。フィールド名も簡潔なものに変更